<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleText"
        android:layout_width="369dp"
        android:layout_height="66dp"
        android:background="@drawable/title"
        android:fontFamily="@font/adlam_display"
        android:text="@string/titleText"
        android:textAlignment="center"
        android:textColor="@color/color_on_surface"
        android:textSize="50sp"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menuSettingsButton"
        app:layout_constraintStart_toStartOf="@+id/menuHomeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0500000" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/instructionsText"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/instructions"
        android:fontFamily="@font/adlam_display"
        android:padding="20dp"
        android:text="@string/homeInstructionsText"
        android:textAlignment="viewStart"
        android:textColor="@color/color_on_surface"
        android:textSize="18sp"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/menuGameButton"
        app:layout_constraintEnd_toEndOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="216dp"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuHomeButton"
        android:layout_width="@dimen/menuButtonWidth"
        android:layout_height="65dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/menuHomeButtonText"
        android:textColor="@color/color_on_surface"
        app:backgroundTint="@color/color_surface"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menuGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuGameButton"
        android:layout_width="@dimen/menuButtonWidth"
        android:layout_height="65dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/menuGameButtonText"
        android:textColor="@color/color_on_surface"
        app:backgroundTint="@color/color_surface"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menuSettingsButton"
        app:layout_constraintStart_toEndOf="@+id/menuHomeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuSettingsButton"
        android:layout_width="@dimen/menuButtonWidth"
        android:layout_height="65dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/menuSettingsButtonText"
        android:textColor="@color/color_on_surface"
        app:backgroundTint="@color/color_surface"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuGameButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>